* BUG#9703 FIx APIs inconsistencies
* BUG#9693 By default, prevent No Select batches from splitting on error
* BUG#9617 Fix a bug where a single document production request could be treated multiple times
* BUG#9660 Fix icons paths
* FEA#8852 Improve event logs look and feel: filtering on groups and adding icons
* FEA#9379 Add phone numbers in coog-dep
* BUG#7679 Prevent splitting of a batch tasks when the transaction size is defined
* BUG#9355 Only check access for apply button when applying endorsements
* FEA#9342 Add function get_latest_anniversary to coog_date which computes the latest anniversary of a certain date before another date
* BUG#9251 Automatic bypass of User Warnings when executing a batch
* OTH#0000 Fix iteration in dictionarize
* BUG#9180 Fix crash on chain_name when launching batch
* FEA#8534 Add batch report command line
* BUG#9028 Force synchronous execution on planned rollbacked transaction
* OTH#0000 Fix async method inheritance
* BUG#8983 Fix party identifier dynamic types fetching
* FEA#7941 Add keyword attribute to button tag
* OTH#0000 Add user's groups and party's bank account among historizable models by configuration
* FEA#8212 Execution of heavy business treatment in asynchronous mode
* OTH#0000 Fix client plugin linking in coog repo link
* BUG#8683 RGPD: Remove anonymization of banks
* BUG#8843 Force order in search_and_stream method
* FEA#8621 RGPD: Apply RGPD tryton evolution to Coog
* OTH#0000 Stop the server if field definitions are inconsistent

Version 2.0 - 2018-04-13
* OTH#0000 Fix inconsistencies in field definitions
* FEA#8448 Add data anonymization scripts
* FEA#8160 Function cache for rng (not serializable)
* BUG#8091 Use "Decimal" in the "convert_frequency" function
* FEA#8095 Add a search and stream feature to optimize reportings
* OTH#0000 Add "Hard" tag in the "test converter"
* BUG#8013 Reactivate Debug Object
* BUG#8025 Fix sub transactions crash in scenarios